@@ -28,6 +28,7 @@ import org.apache.eventmesh.webhook.api.WebHookConfig;
 import org.apache.eventmesh.webhook.api.WebHookConfigOperation;
 import org.apache.eventmesh.webhook.api.WebHookOperationConstant;
 
+import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
@@ -182,8 +183,13 @@ public class NacosWebHookConfigOperation implements WebHookConfigOperation {
      * @return
      */
     private String getWebHookConfigDataId(WebHookConfig webHookConfig) {
-        // use URLEncoder.encode before, because the path may contain some speacial char like '/', which is illegal as a data id.
-        return URLEncoder.encode(webHookConfig.getCallbackPath(), StandardCharsets.UTF_8) + DATA_ID_EXTENSION;
+        try {
+            // use URLEncoder.encode before, because the path may contain some speacial char like '/', which is illegal as a data id.
+            return URLEncoder.encode(webHookConfig.getCallbackPath(), StandardCharsets.UTF_8.name()) + DATA_ID_EXTENSION;
+        } catch (UnsupportedEncodingException e) {
+            logger.error("get webhookConfig dataId {} failed", webHookConfig.getCallbackPath(), e);
+        }
+        return webHookConfig.getCallbackPath() + DATA_ID_EXTENSION;
     }
 
     private String getManuGroupId(WebHookConfig webHookConfig) {
